--- a/requirements.txt
+++ b/requirements.txt
@@ -65,7 +65,7 @@ nltk==3.6.7
 notebook==6.4.8
 numpy==1.21.5
 oauthlib==3.2.0
-opencv-python==4.5.5.62
+opencv-python-headless
 opt-einsum==3.3.0
 packaging==21.3
 pandas==1.1.5
